--- a/transformtools.html
+++ b/transformtools.html
@@ -200,6 +200,10 @@
 <a class="reference internal image-reference" href="_images/UModeler_TransformHoldingShift_v2.gif"><img alt="_images/UModeler_TransformHoldingShift_v2.gif" src="_images/UModeler_TransformHoldingShift_v2.gif" style="width: 760.0px; height: 566.1999999999999px;" /></a>
 <p class="caption"><span class="caption-text">Transforming elements holding <code class="docutils literal"><span class="pre">SHIFT</span></code>.</span></p>
 </div>
+<div class="figure" id="id5">
+<a class="reference internal image-reference" href="_images/UModeler_TransformTool_SnapEdgeToPolygon.gif"><img alt="_images/UModeler_TransformTool_SnapEdgeToPolygon.gif" src="_images/UModeler_TransformTool_SnapEdgeToPolygon.gif" style="width: 760.0px; height: 493.04999999999995px;" /></a>
+<p class="caption"><span class="caption-text"><code class="docutils literal"><span class="pre">Snap</span> <span class="pre">To</span> <span class="pre">Polygon</span></code> property Demo.</span></p>
+</div>
 </div>
 </div>
 <hr class="docutils" />
