--- a/primitiveshapetools.html
+++ b/primitiveshapetools.html
@@ -238,7 +238,7 @@
 <p class="caption"><span class="caption-text">Box Tool Demo - Basic and <code class="docutils literal"><span class="pre">Width</span></code>, <code class="docutils literal"><span class="pre">Depth</span></code>, <code class="docutils literal"><span class="pre">Height</span></code> and <code class="docutils literal"><span class="pre">Border</span> <span class="pre">Check</span></code> properties</span></p>
 </div>
 <div class="figure" id="id21">
-<a class="reference internal image-reference" href="images/UModeler_BoxTool2.gifz"><img alt="images/UModeler_BoxTool2.gifz" src="images/UModeler_BoxTool2.gifz" /></a>
+<a class="reference internal image-reference" href="_images/UModeler_BoxTool2.gif"><img alt="_images/UModeler_BoxTool2.gif" src="_images/UModeler_BoxTool2.gif" style="width: 760.0px; height: 493.04999999999995px;" /></a>
 <p class="caption"><span class="caption-text">Box Tool Demo - <code class="docutils literal"><span class="pre">Glue</span></code> property and enabled <cite>Snap</cite></span></p>
 </div>
 </div>
