--- a/removetools.html
+++ b/removetools.html
@@ -169,7 +169,7 @@
 <blockquote>
 <div><ul class="simple">
 <li><code class="docutils literal"><span class="pre">Immediate</span> <span class="pre">Mode</span></code> - Select elements at first and then click on <code class="docutils literal"><span class="pre">Eraser</span></code> button to remove them.</li>
-<li><code class="docutils literal"><span class="pre">Edit</span> <span class="pre">Mode</span></code> - Select <code class="docutils literal"><span class="pre">Eraser</span></code> tool first with no selected elements and then click on an edge which you want to remove.</li>
+<li><code class="docutils literal"><span class="pre">Edit</span> <span class="pre">Mode</span></code> - Select <code class="docutils literal"><span class="pre">Eraser</span> <span class="pre">Tool</span></code> first with no selected elements and then click on an edge which you want to remove.</li>
 </ul>
 </div></blockquote>
 <p>When you try to erase an edge shared by two coplanar polygons, only the edge will be removed and the two shared polygons will be merged. Otherwise, the two polygons will be removed, too.</p>
@@ -199,7 +199,7 @@
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
 <div class="last line-block">
-<div class="line">If you select <code class="docutils literal"><span class="pre">Combine</span></code> tool with no selected vertices, you will enter <code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Vertex</span></code> mode. In this mode you can selected vertices and set up some options and combine them.</div>
+<div class="line">If you select <code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Tool</span></code> with no selected vertices, you will enter <code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Vertex</span></code> mode. In this mode you can selected vertices and set up some options and combine them.</div>
 <div class="line">However, if you click on <code class="docutils literal"><span class="pre">Combine</span></code> button with some vertices selected, the combine action will happen immediately.</div>
 </div>
 </div>
