Uploaded Search Edit Box Image.

--- a/overview.html
+++ b/overview.html
@@ -191,6 +191,12 @@
 <dl class="docutils">
 <dt>Search EditBox</dt>
 <dd>Search for a specific tool. This edit box can be activated by pressing <code class="docutils literal"><span class="pre">ENTER</span></code> in the scene view or inspector.</dd>
+</dl>
+<div class="figure" id="id4">
+<a class="reference internal image-reference" href="_images/UModeler_SearchEditBox.gif"><img alt="_images/UModeler_SearchEditBox.gif" src="_images/UModeler_SearchEditBox.gif" style="width: 760.0px; height: 520.6px;" /></a>
+<p class="caption"><span class="caption-text">Search Edit Box demo</span></p>
+</div>
+<dl class="docutils">
 <dt>Tools and Properties</dt>
 <dd>A set of Tools and Properties</dd>
 </dl>
