--- a/UVEditor/fliprotatealignment.html
+++ b/UVEditor/fliprotatealignment.html
@@ -223,6 +223,13 @@
 <p class="caption"><span class="caption-text">Alignment tools demo.</span></p>
 </div>
 </dd>
+<dt>Boundary</dt>
+<dd><p class="first">Aligns with a boundary box of the last selected polygon or uvisland.</p>
+<div class="last figure" id="id4">
+<a class="reference internal image-reference" href="../_images/UModeler_UVEditor_AlignBoundary.gif"><img alt="../_images/UModeler_UVEditor_AlignBoundary.gif" src="../_images/UModeler_UVEditor_AlignBoundary.gif" style="width: 760.0px; height: 553.85px;" /></a>
+<p class="caption"><span class="caption-text">Boundary Alignment tool demo.</span></p>
+</div>
+</dd>
 </dl>
 </div>
 </div>
