Missing information has been added about UV Transform, Open/close button and Space bar in combine tool

--- a/overview.html
+++ b/overview.html
@@ -182,10 +182,16 @@
 <div class="line"><code class="docutils literal"><span class="pre">Close</span></code> - Disables UModeler for the current object.</div>
 </div>
 </dd>
+</dl>
+<div class="figure" id="id3">
+<a class="reference internal image-reference" href="_images/UModeler_OpenCloseButtons.gif"><img alt="_images/UModeler_OpenCloseButtons.gif" src="_images/UModeler_OpenCloseButtons.gif" style="width: 760.0px; height: 484.5px;" /></a>
+<p class="caption"><span class="caption-text">Closes and Opens UModeler component. With Closing state UModeler&#8217;s behaviour and visualization are like the normal game object. You can open UModeler tool whenever you want to edit it.</span></p>
+</div>
+<dl class="docutils">
 <dt>Settings</dt>
 <dd>Settings regarding <code class="docutils literal"><span class="pre">Display</span></code>, <code class="docutils literal"><span class="pre">Gizmo</span></code> and <code class="docutils literal"><span class="pre">Snap</span></code>.</dd>
 </dl>
-<div class="figure" id="id3">
+<div class="figure" id="id4">
 <a class="reference internal image-reference" href="_images/UModeler_Inspector_Tools.jpg"><img alt="_images/UModeler_Inspector_Tools.jpg" src="_images/UModeler_Inspector_Tools.jpg" style="width: 150.75px; height: 489.15000000000003px;" /></a>
 <p class="caption"><span class="caption-text">UModeler Inspector - <code class="docutils literal"><span class="pre">Search</span> <span class="pre">EditBox</span></code> and <code class="docutils literal"><span class="pre">Tools</span></code></span></p>
 </div>
@@ -193,7 +199,7 @@
 <dt>Search EditBox</dt>
 <dd>Search for a specific tool. This edit box can be activated by pressing <code class="docutils literal"><span class="pre">ENTER</span></code> in the scene view or inspector.</dd>
 </dl>
-<div class="figure" id="id4">
+<div class="figure" id="id5">
 <a class="reference internal image-reference" href="_images/UModeler_SearchEditBox.gif"><img alt="_images/UModeler_SearchEditBox.gif" src="_images/UModeler_SearchEditBox.gif" style="width: 760.0px; height: 520.6px;" /></a>
 <p class="caption"><span class="caption-text">Search Edit Box demo</span></p>
 </div>
