--- a/releasenotes_UModeler_2.0.html
+++ b/releasenotes_UModeler_2.0.html
@@ -185,6 +185,8 @@
 <li><code class="docutils literal"><span class="pre">Mirror</span> <span class="pre">Tool</span></code> - Now you can move the mirror plane by <code class="docutils literal"><span class="pre">LMB</span> <span class="pre">Drag</span></code> over the arrow of the mirror plane.</li>
 <li><code class="docutils literal"><span class="pre">Flip</span> <span class="pre">Tool</span></code> has been added in <code class="docutils literal"><span class="pre">Tweak</span></code> group.</li>
 <li><code class="docutils literal"><span class="pre">Align</span> <span class="pre">Tool</span></code> has been added in <code class="docutils literal"><span class="pre">Tweak</span></code> group.</li>
+<li><code class="docutils literal"><span class="pre">UV</span> <span class="pre">Tool</span></code> - Added moving UVs by pressing Up or Down arrow keys holding CTRL.</li>
+<li><code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Tool</span></code> - Pressing <code class="docutils literal"><span class="pre">SPACE</span></code> will combine the selected vertices in <code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Tool</span></code>.</li>
 </ul>
 </div></blockquote>
 </div>
