--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -151,6 +151,8 @@
 <p>Here are the videos on how to build meshes and levels with UModeler.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/LgLFMZWzw-0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/h4qCwBA1fZs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GVO9VZjtdi8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GnkYRQnV1Wg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
