--- a/releasenotes_UModeler_2.0.html
+++ b/releasenotes_UModeler_2.0.html
@@ -187,6 +187,8 @@
 <li><code class="docutils literal"><span class="pre">Align</span> <span class="pre">Tool</span></code> has been added in <code class="docutils literal"><span class="pre">Tweak</span></code> group.</li>
 <li><code class="docutils literal"><span class="pre">UV</span> <span class="pre">Tool</span></code> - Added moving UVs by pressing Up or Down arrow keys holding CTRL.</li>
 <li><code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Tool</span></code> - Pressing <code class="docutils literal"><span class="pre">SPACE</span></code> will combine the selected vertices in <code class="docutils literal"><span class="pre">Combine</span> <span class="pre">Tool</span></code>.</li>
+<li><code class="docutils literal"><span class="pre">Vertex/Edge/Polygon</span> <span class="pre">Tool</span></code> - 1D Snapping has been added. It works by moving a cursor to another vertex holding <code class="docutils literal"><span class="pre">CTRL</span></code> while dragging the translation gizmo.</li>
+<li><code class="docutils literal"><span class="pre">Vertex/Edge/Polygon</span> <span class="pre">Tool</span></code> - <code class="docutils literal"><span class="pre">Insert</span> <span class="pre">Vertex</span></code> property has been added.</li>
 </ul>
 </div></blockquote>
 </div>
