--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <a class="reference internal image-reference" href="_images/sm_UM_Screen08.png"><img alt="_images/sm_UM_Screen08.png" src="_images/sm_UM_Screen08.png" style="width: 1056.0px; height: 594.0px;" /></a>
 <p class="caption"><span class="caption-text">Village on the water modeled with only UModeler.</span></p>
 </div>
-<iframe src="https://api.assetstore.unity3d.com/affiliate/embed/package/80868/widget?aid=1011l36n8" style="width:202px; height:260px; border:0px;"></iframe><div class="line-block">
+<a href="https://www.assetstore.unity3d.com/#!/content/80868?aid=1011l36n8">Asset Store</a> | <a href="http://umodeler.co">Website</a><div class="line-block">
 <div class="line"><br /></div>
 </div>
 <p>Welcome to the UModeler Manual!</p>
