--- a/releasenotes_UModeler_2.0.html
+++ b/releasenotes_UModeler_2.0.html
@@ -171,6 +171,7 @@
 <blockquote>
 <div><ul class="simple">
 <li>Hotfix : Adding/Removing material in Material tool wreren&#8217;t allowed.</li>
+<li>Hotfix : Individual edge transform holding <code class="docutils literal"><span class="pre">SHIFT</span></code>.</li>
 </ul>
 </div></blockquote>
 </div>
@@ -181,7 +182,10 @@
 <li>UV Editor : PBR texture preview</li>
 <li>UV Editor : Keeps width/height ratio of the polygon after unwrapping.</li>
 <li>UV Editor : Keeps the orientation of the polygons after unwrapping.</li>
-<li>Supports the preview texture of Surforge.</li>
+<li>Supports the Surforge preview texture wrapped in UModeler.</li>
+<li>UV Editor : 1D snapping done by transforming elements holding <code class="docutils literal"><span class="pre">CTRL</span></code></li>
+<li>Transform tool : 1D snapping done by transforming elements holding <code class="docutils literal"><span class="pre">CTRL</span></code></li>
+<li>Transform tool : Exposure of <code class="docutils literal"><span class="pre">Insert</span> <span class="pre">Vertex</span></code> property.</li>
 <li><code class="docutils literal"><span class="pre">Transform</span> <span class="pre">tool</span></code> : Vertex splits when transforming a vertex holding <code class="docutils literal"><span class="pre">SHIFT</span></code>.</li>
 <li><code class="docutils literal"><span class="pre">Material</span> <span class="pre">tool</span></code> : Improvement of displaying material preview in the list. The material with no texture is also displayed well.</li>
 <li><code class="docutils literal"><span class="pre">Bevel</span> <span class="pre">Tool</span></code> : Made the selected vertices/edges/polygons visible at the beginning of Beveling.</li>
