--- a/releasenotes_UModeler_2.0.html
+++ b/releasenotes_UModeler_2.0.html
@@ -173,7 +173,7 @@
 <div><ul class="simple">
 <li>Hotfix : Adding/Removing material in Material tool wreren&#8217;t allowed.</li>
 <li>Hotfix : Individual edge transform holding <code class="docutils literal"><span class="pre">SHIFT</span></code>.</li>
-<li>Hotfix : Incorrect triangle count. The former displayed triangle number was twice than the real one.</li>
+<li>Hotfix : Incorrect triangle count. The former displayed triangle number was twice more than the real one.</li>
 </ul>
 </div></blockquote>
 </div>
