--- a/drawingtools.html
+++ b/drawingtools.html
@@ -219,6 +219,10 @@
 <a class="reference internal image-reference" href="_images/UModeler_LineTool.gif"><img alt="_images/UModeler_LineTool.gif" src="_images/UModeler_LineTool.gif" style="width: 760.0px; height: 491.15px;" /></a>
 <p class="caption"><span class="caption-text">Line Tool Demo</span></p>
 </div>
+<div class="figure" id="id15">
+<a class="reference internal image-reference" href="_images/UModeler_SnapToXY.gif"><img alt="_images/UModeler_SnapToXY.gif" src="_images/UModeler_SnapToXY.gif" style="width: 760.0px; height: 525.35px;" /></a>
+<p class="caption"><span class="caption-text">Snap To X or Y axis line. The cursor color change to pink when it is snapped to X or Y axis of the former points. (Available from 2.0.6)</span></p>
+</div>
 </div>
 </div>
 <hr class="docutils" />
@@ -255,7 +259,7 @@
 <dt>Close</dt>
 <dd>When Close property is enabled, the first and last vertices will be connected to create a closed form.</dd>
 </dl>
-<div class="figure" id="id15">
+<div class="figure" id="id16">
 <a class="reference internal image-reference" href="_images/UModeler_ArcTool.gif"><img alt="_images/UModeler_ArcTool.gif" src="_images/UModeler_ArcTool.gif" style="width: 760.0px; height: 491.15px;" /></a>
 <p class="caption"><span class="caption-text">Arc Tool Demo</span></p>
 </div>
@@ -298,7 +302,7 @@
 <dt>Corner Segment</dt>
 <dd>The segment number of the corner.</dd>
 </dl>
-<div class="figure" id="id16">
+<div class="figure" id="id17">
 <a class="reference internal image-reference" href="_images/UModeler_RectangleTool.gif"><img alt="_images/UModeler_RectangleTool.gif" src="_images/UModeler_RectangleTool.gif" style="width: 760.0px; height: 491.15px;" /></a>
 <p class="caption"><span class="caption-text">Rectangle Tool Demo</span></p>
 </div>
@@ -338,7 +342,7 @@
 <dt>Angle Snap</dt>
 <dd>When you drag the mouse with this property on, the disk’s direction will snap to every 90 degree time.</dd>
 </dl>
-<div class="figure" id="id17">
+<div class="figure" id="id18">
 <a class="reference internal image-reference" href="_images/UModeler_DiskTool.gif"><img alt="_images/UModeler_DiskTool.gif" src="_images/UModeler_DiskTool.gif" style="width: 760.0px; height: 493.04999999999995px;" /></a>
 <p class="caption"><span class="caption-text">Disk Tool Demo</span></p>
 </div>
@@ -367,7 +371,7 @@
 <dt>Flip</dt>
 <dd>Flips the drawn stair profile.</dd>
 </dl>
-<div class="figure" id="id18">
+<div class="figure" id="id19">
 <a class="reference internal image-reference" href="_images/UModeler_SideStairTool.gif"><img alt="_images/UModeler_SideStairTool.gif" src="_images/UModeler_SideStairTool.gif" style="width: 760.0px; height: 491.15px;" /></a>
 <p class="caption"><span class="caption-text">Side Stair Tool Demo</span></p>
 </div>
@@ -407,7 +411,7 @@
 <dt>Distance</dt>
 <dd>Distance from the original edge.</dd>
 </dl>
-<div class="figure" id="id19">
+<div class="figure" id="id20">
 <a class="reference internal image-reference" href="_images/UModeler_ParallelTool.gif"><img alt="_images/UModeler_ParallelTool.gif" src="_images/UModeler_ParallelTool.gif" style="width: 760.0px; height: 491.15px;" /></a>
 <p class="caption"><span class="caption-text">Parallel Tool Demo</span></p>
 </div>
