Added SnapToXY link

--- a/drawingtools.html
+++ b/drawingtools.html
@@ -220,7 +220,7 @@
 <p class="caption"><span class="caption-text">Line Tool Demo</span></p>
 </div>
 <div class="figure" id="id15">
-<a class="reference internal image-reference" href="_images/UModeler_SnapToXY.gif"><img alt="_images/UModeler_SnapToXY.gif" src="_images/UModeler_SnapToXY.gif" style="width: 760.0px; height: 525.35px;" /></a>
+<span id="snaptoxy"></span><a class="reference internal image-reference" href="_images/UModeler_SnapToXY.gif"><img alt="_images/UModeler_SnapToXY.gif" src="_images/UModeler_SnapToXY.gif" style="width: 760.0px; height: 525.35px;" /></a>
 <p class="caption"><span class="caption-text">Snap To X or Y axis line. The cursor color change to pink when it is snapped to X or Y axis of the former points. (Available from 2.0.6)</span></p>
 </div>
 </div>
