Added recalculating tangents gif.

--- a/misctools.html
+++ b/misctools.html
@@ -237,6 +237,10 @@
 <a class="reference internal image-reference" href="_images/UModeler_GenerateLightmapUVs.gif"><img alt="_images/UModeler_GenerateLightmapUVs.gif" src="_images/UModeler_GenerateLightmapUVs.gif" style="width: 760.0px; height: 484.5px;" /></a>
 <p class="caption"><span class="caption-text"><code class="docutils literal"><span class="pre">Generate</span> <span class="pre">Light</span> <span class="pre">UVs</span></code> Demo.</span></p>
 </div>
+<div class="figure" id="id4">
+<a class="reference internal image-reference" href="_images/UModeler_RecalculatingTangents.gif"><img alt="_images/UModeler_RecalculatingTangents.gif" src="_images/UModeler_RecalculatingTangents.gif" style="width: 760.0px; height: 516.8px;" /></a>
+<p class="caption"><span class="caption-text"><code class="docutils literal"><span class="pre">Tangent</span> <span class="pre">Recalculataion</span></code> Demo.</span></p>
+</div>
 </div>
 </div>
 </div>
