--- a/overview.html
+++ b/overview.html
@@ -197,7 +197,7 @@
 </div>
 <dl class="docutils">
 <dt>Search EditBox</dt>
-<dd>Search for a specific tool. This edit box can be activated by pressing <code class="docutils literal"><span class="pre">ENTER</span></code> in the scene view or inspector.</dd>
+<dd>Searches for a specific tool. This edit box can be activated by pressing <code class="docutils literal"><span class="pre">ENTER</span></code> in the scene view or inspector.</dd>
 </dl>
 <div class="figure" id="id5">
 <a class="reference internal image-reference" href="_images/UModeler_SearchEditBox.gif"><img alt="_images/UModeler_SearchEditBox.gif" src="_images/UModeler_SearchEditBox.gif" style="width: 760.0px; height: 520.6px;" /></a>
