--- a/misctools.html
+++ b/misctools.html
@@ -231,7 +231,7 @@
 </dl>
 <dl class="docutils" id="recalculate-tangents">
 <dt>Recalculate Tangents</dt>
-<dd>If this is on, tagent vectors will be calculated every time UModeler mesh changes. If the materials in UModeler have normal textures, this should be on.</dd>
+<dd>If this is on, tangent vectors will be calculated every time UModeler mesh changes. If the materials in UModeler have normal textures, this should be on.</dd>
 </dl>
 <div class="figure" id="id3">
 <a class="reference internal image-reference" href="_images/UModeler_GenerateLightmapUVs.gif"><img alt="_images/UModeler_GenerateLightmapUVs.gif" src="_images/UModeler_GenerateLightmapUVs.gif" style="width: 760.0px; height: 484.5px;" /></a>
