--- a/tweaktools.html
+++ b/tweaktools.html
@@ -255,7 +255,7 @@
 <dt>Distance</dt>
 <dd>The distance of the mirror plane.</dd>
 <dt>Flip</dt>
-<dd>Flips the selected polygons.</dd>
+<dd>Flips the mirror plane.</dd>
 </dl>
 <div class="figure" id="id7">
 <a class="reference internal image-reference" href="_images/UModeler_FlipTool.gif"><img alt="_images/UModeler_FlipTool.gif" src="_images/UModeler_FlipTool.gif" style="width: 760.0px; height: 481.65px;" /></a>
