--- a/selectiontools.html
+++ b/selectiontools.html
@@ -294,7 +294,7 @@
 </ol>
 <div class="figure" id="id12">
 <a class="reference internal image-reference" href="_images/UModeler_IncreaseSelection_v2.gif"><img alt="_images/UModeler_IncreaseSelection_v2.gif" src="_images/UModeler_IncreaseSelection_v2.gif" style="width: 760.0px; height: 460.75px;" /></a>
-<p class="caption"><span class="caption-text">Edge Rings and Quad Rings</span></p>
+<p class="caption"><span class="caption-text">Increase selection tool demo.</span></p>
 </div>
 </div>
 </div>
