Updated 2.1.1 release note.

--- a/pushpulltools.html
+++ b/pushpulltools.html
@@ -289,11 +289,11 @@
 <p class="caption"><span class="caption-text">Multi PushPull Tool Demo.</span></p>
 </div>
 <div class="figure" id="id9">
-<a class="reference internal image-reference" href="_images/UModeler_MultiplePushPull_3types.gif"><img alt="_images/UModeler_MultiplePushPull_3types.gif" src="_images/UModeler_MultiplePushPull_3types.gif" style="width: 760.0px; height: 482.59999999999997px;" /></a>
+<span id="vertexnormalpushpull"></span><a class="reference internal image-reference" href="_images/UModeler_MultiplePushPull_3types.gif"><img alt="_images/UModeler_MultiplePushPull_3types.gif" src="_images/UModeler_MultiplePushPull_3types.gif" style="width: 760.0px; height: 482.59999999999997px;" /></a>
 <p class="caption"><span class="caption-text">3 types of Multi PushPull action - <code class="docutils literal"><span class="pre">Individual</span> <span class="pre">Polygon</span></code>, <code class="docutils literal"><span class="pre">Vertex</span> <span class="pre">Normal</span></code> and <code class="docutils literal"><span class="pre">Average</span> <span class="pre">Normal</span></code></span></p>
 </div>
 <div class="figure" id="id10">
-<a class="reference internal image-reference" href="_images/UModeler_MultiPushPull_Onestepextrusion.gif"><img alt="_images/UModeler_MultiPushPull_Onestepextrusion.gif" src="_images/UModeler_MultiPushPull_Onestepextrusion.gif" style="width: 760.0px; height: 482.59999999999997px;" /></a>
+<span id="onesteppushpull"></span><a class="reference internal image-reference" href="_images/UModeler_MultiPushPull_Onestepextrusion.gif"><img alt="_images/UModeler_MultiPushPull_Onestepextrusion.gif" src="_images/UModeler_MultiPushPull_Onestepextrusion.gif" style="width: 760.0px; height: 482.59999999999997px;" /></a>
 <p class="caption"><span class="caption-text">One Step Push/Pull.</span></p>
 </div>
 </div>
