UModeler 2.2.2 releae note.

--- a/primitiveshapetools.html
+++ b/primitiveshapetools.html
@@ -497,6 +497,8 @@ Cancels creating a cone.</p>
 <dd>Reflects the stair.</dd>
 <dt>Glue</dt>
 <dd>The spiral stair with this property enabled will be glued to the polygon where it started to be created. It means that the hidden part of the floor polygon by the created stair is removed.</dd>
+<dt>Angle Snap</dt>
+<dd>When you drag the mouse with this property on, the direction of the spiral stair will snap to every 90 degree.</dd>
 </dl>
 <div class="figure" id="id29">
 <a class="reference internal image-reference" href="_images/UModeler_SpiralStairTool.gif"><img alt="_images/UModeler_SpiralStairTool.gif" src="_images/UModeler_SpiralStairTool.gif" style="width: 594.0px; height: 393.03px;" /></a>
