Additional changes of 2.3.0

--- a/releasenotes_UModeler_2.0.html
+++ b/releasenotes_UModeler_2.0.html
@@ -190,9 +190,13 @@
 <li>Enhancement : Makes it possible to spawn a new primitive shape at a 3d cursor position by clicking on the one-click button</li>
 <li>Enhancement : 3D cursor - Enables to position 3D cursor everywhere by SHIFT+CTRL+LMB - in the air, on any position of a polygon and at a vertex</li>
 <li>Enhancement : Enableing Edge Loop to be selected by LMB double click.</li>
+<li>Enhancement : Added All UModeler object selection to the All/None Select tool.</li>
+<li>Enhancement : Automatic syncs between <code class="docutils literal"><span class="pre">Generate</span> <span class="pre">Lightmap</span> <span class="pre">UVs</span></code> param in the Local Settings Tool and <code class="docutils literal"><span class="pre">Lightmap</span> <span class="pre">Static</span></code> variable in MeshRenderer</li>
 <li>BugFix : Serialization errors - null reference exception</li>
 <li>BugFix : Applied rich text to the icons&#8217; tooltips in the toolbar and menu window.</li>
 <li>BugFix : Wrong rectangle selection of vertex/edge/polygon, and display of overlay numbers in the scaled scene view.</li>
+<li>BugFix : Not displaying all tools in the shortcut setting in Preference.</li>
+<li>BugFix : Made a clone outline clearer by giving more offset in the clone normal direction.</li>
 </ul>
 </div>
 <div class="section" id="version-2-2-3-2">
