--- a/overview.html
+++ b/overview.html
@@ -166,7 +166,7 @@
 <div class="figure">
 <a class="reference internal image-reference" href="_images/UModelerImport2.jpg"><img alt="_images/UModelerImport2.jpg" src="_images/UModelerImport2.jpg" style="width: 645.05px; height: 763.8px;" /></a>
 </div>
-<p>Import UModeler in your project after purching it.</p>
+<p>Import UModeler in your project after getting it.</p>
 <div class="figure">
 <a class="reference internal image-reference" href="_images/UModelerMenu.png"><img alt="_images/UModelerMenu.png" src="_images/UModelerMenu.png" style="width: 975.65px; height: 399.95px;" /></a>
 </div>
@@ -193,7 +193,7 @@
 <dt>Header</dt>
 <dd><div class="first last line-block">
 <div class="line"><code class="docutils literal"><span class="pre">UModeler</span> <span class="pre">Ver</span> <span class="pre">2.xx</span></code> - Opens the About dialog box.</div>
-<div class="line"><code class="docutils literal"><span class="pre">Close</span></code> - Disables UModeler for the current object to make the current UModeler object behave and visulized same as the general obejct. It can be enabled again by clicking on Open button which is shown up during the disable status.</div>
+<div class="line"><code class="docutils literal"><span class="pre">Close</span></code> - Disables UModeler to make the current UModeler object behave and visulized same as the general obejct. It can be enabled again by clicking on Open button which is shown up during the disable status.</div>
 <div class="line"><code class="docutils literal"><span class="pre">?</span></code> - Opens the online manual describing what the current tool is and how to use it.</div>
 <div class="line"><code class="docutils literal"><span class="pre">Search</span> <span class="pre">EditBox</span></code> - Searches for a specific tool. This edit box can be activated by pressing ENTER in the scene view.</div>
 </div>
