--- a/transformtools.html
+++ b/transformtools.html
@@ -197,8 +197,8 @@ Using the Polygon tool, polygons can be selected and moved/rotated/scaled.</p>
 <div class="line">2. Pressing <code class="docutils literal"><span class="pre">W</span></code> <code class="docutils literal"><span class="pre">E</span></code> or <code class="docutils literal"><span class="pre">R</span></code> changes the current gizmo like Unity.</div>
 <div class="line">3. Dragging a mouse from an element causes moving the element</div>
 <div class="line">4. If you hold <code class="docutils literal"><span class="pre">SHIFT</span></code> while dragging a gizmo, the selected elements are extruded.</div>
-<div class="line">5. If you hold <code class="docutils literal"><span class="pre">CTRL</span></code> while dragging a translation gizmo and moving to another vertex, the selected elements&#8217; selected axis&#8217;s value will be snapped to the vertex. This is called <code class="docutils literal"><span class="pre">1D</span> <span class="pre">snapping</span></code></div>
-<div class="line">6. If you hold <code class="docutils literal"><span class="pre">SHIFT</span></code> + <code class="docutils literal"><span class="pre">CTRL</span></code> while dragging a gizmo, the selected elements are transformed separately from the adjacent polygons.</div>
+<div class="line">5. If you hold <code class="docutils literal"><span class="pre">CTRL</span></code> while dragging the move gizmo and moving to another vertex, the selected elements&#8217; selected axis&#8217;s value will be snapped to the vertex. This is called <code class="docutils literal"><span class="pre">1D</span> <span class="pre">snapping</span></code></div>
+<div class="line">6. If you hold <code class="docutils literal"><span class="pre">SHIFT</span></code> + <code class="docutils literal"><span class="pre">CTRL</span></code> while dragging a gizmo, the vertices consisting of the elements will be split.</div>
 </div>
 </div>
 <div class="section" id="properties">
