--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -192,9 +192,9 @@
 <dd>Assigns the Mat ID to the selected polygons.</dd>
 <dt>Select</dt>
 <dd>Selects polygons having the Mat ID.</dd>
-<dt>Add Material</dt>
+<dt>Add Slot</dt>
 <dd>Adds a new material to the Material array below.</dd>
-<dt>Remove Material</dt>
+<dt>Remove Slot</dt>
 <dd>Removes a material.</dd>
 <dt>Materials</dt>
 <dd>Material array</dd>
