--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -175,6 +175,7 @@
 <li>Select <code class="docutils literal"><span class="pre">Material</span> <span class="pre">Tool</span></code>.</li>
 <li>Select polygons where you want to assign a material if no polygon is selected.</li>
 <li>If <code class="docutils literal"><span class="pre">Materials</span></code> doesn’t have a material you want, add a new material slot by clicking <code class="docutils literal"><span class="pre">Add</span> <span class="pre">Slot</span></code> button at the end of the properties to open the material box and select one.</li>
+<li>Click on <code class="docutils literal"><span class="pre">A</span></code> button in the slot. It&#8217;ll assign the material in the slot to the selected polygons.</li>
 <li>Click <code class="docutils literal"><span class="pre">LMB</span></code> holding <code class="docutils literal"><span class="pre">SHIFT</span></code> over a polygon to which you want to assign the current material.</li>
 </ol>
 </div>
