UModeler 2.5 release note

--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -204,7 +204,7 @@
 <dl class="docutils">
 <dt>Texture Button</dt>
 <dd>Selects a slot.</dd>
-<dt>A (Apply polygons)</dt>
+<dt>A (Apply)</dt>
 <dd>Assigns the Mat ID to the selected polygons.</dd>
 <dt>S (Select polygons)</dt>
 <dd>Selects polygons having the Mat ID.</dd>
