Updated the overview page of UVEditor

--- a/UVEditor/overview.html
+++ b/UVEditor/overview.html
@@ -237,7 +237,7 @@
 <tr class="row-even"><td><code class="docutils literal"><span class="pre">CTRL+Y</span></code></td>
 <td>Redo</td>
 </tr>
-<tr class="row-odd"><td>Holding <code class="docutils literal"><span class="pre">SHIFT</span></code></td>
+<tr class="row-odd"><td>Holding <code class="docutils literal"><span class="pre">SHIFT+CTRL</span></code></td>
 <td>Separate Transform</td>
 </tr>
 <tr class="row-even"><td>Holding <code class="docutils literal"><span class="pre">CTRL</span></code></td>
