Updated releae note 2019

--- a/releasenotes_UModeler_2019.html
+++ b/releasenotes_UModeler_2019.html
@@ -175,6 +175,7 @@
 <div><ul class="simple">
 <li>Hotfix : Fixed errors while UModelerizing.</li>
 <li>Hotfix : Fixed bug where the selected UModeler object disappearing when entering the game mode.</li>
+<li>Hotfix : Fixed bug where icons look a little bit whitish.</li>
 </ul>
 </div></blockquote>
 </div>
