--- a/releasenotes_UModeler_2019.html
+++ b/releasenotes_UModeler_2019.html
@@ -194,6 +194,7 @@
 <li>Hotfix : Fixed bug of primitive shape group tools and pushpull tool where pushing or pulling a face sometimes causes unexpected sudden move when the mouse cursor points at somewhere in the background.</li>
 <li>Hotfix : Enables 3D cursor to be displayed in object mode.</li>
 <li>Hotfix : Fix bug where UModeler meshes with smoothing groups disappears in play mode</li>
+<li>Enhancement : Added <code class="docutils literal"><span class="pre">Top</span> <span class="pre">Center</span></code>, <code class="docutils literal"><span class="pre">Center</span></code> and <code class="docutils literal"><span class="pre">Bottom</span> <span class="pre">Center</span></code> buttons to <code class="docutils literal"><span class="pre">Pivot</span> <span class="pre">To</span> <span class="pre">Center</span></code> tool.</li>
 </ul>
 </div></blockquote>
 </div>
