Update LocalSettings tool

--- a/MiscGroup/LocalSettingsTool.html
+++ b/MiscGroup/LocalSettingsTool.html
@@ -167,8 +167,8 @@
 <dl class="docutils">
 <dt>Backface</dt>
 <dd>backfaces on/off</dd>
-<dt>Generate Lightmap UVs</dt>
-<dd>If this is on, Secondary UVs for lightmap will be generated every time UModeler mesh changes.</dd>
+<dt>Lightmap Static</dt>
+<dd>Changes the lighting way to lightmap. This variable is interlocked with <code class="docutils literal"><span class="pre">Lightmap</span> <span class="pre">Static</span></code> in <code class="docutils literal"><span class="pre">Lighting</span></code> window.</dd>
 </dl>
 <dl class="docutils" id="recalculate-tangents">
 <dt>Recalculate Tangents</dt>
@@ -176,6 +176,14 @@
 <dt>Don&#8217;t Save In Build</dt>
 <dd>If this is on, UModeler component isn&#8217;t included in Build. If you want to edit a mesh using UModeler at runtime, it needs to be on when the project is built.
 Usually this property is on because most meshes are just for rendering at runtime.</dd>
+<dt>Generate UV2 channel for Lightmap</dt>
+<dd><p class="first">Generate UVs for lightmaps. From 2.6.9 UVs for lightmap aren&#8217;t created automatically. If you want to generate lightmap UVs of all UModeler meshs in a scene, click on <code class="docutils literal"><span class="pre">Tools</span> <span class="pre">&gt;</span> <span class="pre">UModeler</span> <span class="pre">&gt;</span> <span class="pre">Refresh</span> <span class="pre">All</span></code>.</p>
+<blockquote class="last">
+<div><div class="figure">
+<a class="reference internal image-reference" href="../_images/LocalSettings.jpg"><img alt="../_images/LocalSettings.jpg" src="../_images/LocalSettings.jpg" style="width: 276.0px; height: 246.0px;" /></a>
+</div>
+</div></blockquote>
+</dd>
 </dl>
 </div>
 </div>
