--- a/releasenotes_UModeler_2019.html
+++ b/releasenotes_UModeler_2019.html
@@ -182,7 +182,7 @@
 <div><ul class="simple">
 <li>Hotfix : Fix bug where lightmaps are broken in play mode.</li>
 <li>Hotfix : Fix bug where the gizmo disappear when getting back to edit mode from play mode.</li>
-<li>Enhancement : Enhanced [Tools &gt; UModeler &gt; Refresh All] to fix invisible mesh and generate secondary uvs etc.</li>
+<li>Enhancement : Enhanced <code class="docutils literal"><span class="pre">Tools</span> <span class="pre">&gt;</span> <span class="pre">UModeler</span> <span class="pre">&gt;</span> <span class="pre">Refresh</span> <span class="pre">All</span></code> to fix invisible mesh and generate secondary uvs etc.</li>
 <li>Change : Changed <code class="docutils literal"><span class="pre">Generate</span> <span class="pre">Lightmap</span> <span class="pre">UVs</span></code> to <code class="docutils literal"><span class="pre">Lightmap</span> <span class="pre">Static</span></code> and added <code class="docutils literal"><span class="pre">Generate</span> <span class="pre">UV2</span> <span class="pre">channel</span> <span class="pre">for</span> <span class="pre">Lightmap</span></code> button to <code class="docutils literal"><span class="pre">Local</span> <span class="pre">Settings</span></code> tool</li>
 </ul>
 </div></blockquote>
