--- a/releasenotes_UModeler_2019.html
+++ b/releasenotes_UModeler_2019.html
@@ -195,7 +195,7 @@
 <li>Enhancement : <code class="docutils literal"><span class="pre">ExportTool</span></code> Added <code class="docutils literal"><span class="pre">Create</span> <span class="pre">Folder</span></code>, <code class="docutils literal"><span class="pre">Export</span> <span class="pre">Material</span></code>, <code class="docutils literal"><span class="pre">Export</span> <span class="pre">Vertex</span> <span class="pre">Color</span></code> and <code class="docutils literal"><span class="pre">Optimize</span> <span class="pre">UV</span></code> toggles for .obj export to allow a folder not to be created.</li>
 <li>Enhancement : <code class="docutils literal"><span class="pre">ExportTool</span></code> Added <code class="docutils literal"><span class="pre">Reset</span> <span class="pre">.Obj</span> <span class="pre">Properties</span></code> button.</li>
 <li>Enhancement : <code class="docutils literal"><span class="pre">ExportTool</span></code> Allowed a mesh to be exported as .obj under any other folders.</li>
-<li>Enhancement : Changed the pivot position Move/Rotate/Scale handlers of the selected elements to the center of the last element. It used to be the center of all selected elements.</li>
+<li>Enhancement : Changed the Move/Rotate/Scale handlers&#8217; position to the center of the last element. It used to be the center of all the selected elements.</li>
 <li>Enhancement : Increased the selection vertex marker size. Now markers are more noticdeable and easiser to be selected.</li>
 <li>Enhancement : Made CMD available instead of CTRL on MacOSX</li>
 <li>Fix : Fixed Null Reference Exception in UVEditorWindow.EditorMsgCallback</li>
