Updated Release note and Material tool doc

--- a/SurfaceGroup/MaterialTool.html
+++ b/SurfaceGroup/MaterialTool.html
@@ -166,7 +166,7 @@
 <p>Adds and assigns materials to the polygons.</p>
 <blockquote>
 <div><div class="figure">
-<img alt="../_images/UModeler_MaterialTool2.5.jpg" src="../_images/UModeler_MaterialTool2.5.jpg" />
+<img alt="../_images/UModeler_Material_Slots.jpg" src="../_images/UModeler_Material_Slots.jpg" />
 </div>
 </div></blockquote>
 <div class="section" id="steps">
@@ -175,7 +175,7 @@
 <li>Select <code class="docutils literal"><span class="pre">Material</span> <span class="pre">Tool</span></code>.</li>
 <li>Select polygons where you want to assign a material if no polygon is selected.</li>
 <li>If <code class="docutils literal"><span class="pre">Materials</span></code> doesn’t have a material you want, add a new material slot by clicking <code class="docutils literal"><span class="pre">Add</span> <span class="pre">Slot</span></code> button at the end of the properties to open the material box and select one.</li>
-<li>Click on <code class="docutils literal"><span class="pre">A</span></code> button in the slot. It&#8217;ll assign the material in the slot to the selected polygons.</li>
+<li>Press <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> shorcut or Click on <code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> or <code class="docutils literal"><span class="pre">A</span></code> button in the slot. It&#8217;ll assign the material in the slot to the selected polygons.</li>
 <li>Click <code class="docutils literal"><span class="pre">LMB</span></code> holding <code class="docutils literal"><span class="pre">SHIFT</span></code> over a polygon to which you want to assign the current material.</li>
 </ol>
 </div>
@@ -204,7 +204,7 @@
 <dl class="docutils">
 <dt>Texture Button</dt>
 <dd>Selects a slot.</dd>
-<dt>A (Apply)</dt>
+<dt><code class="docutils literal"><span class="pre">Alt</span> <span class="pre">+</span> <span class="pre">n</span></code> or A (Assign)</dt>
 <dd>Assigns the Mat ID to the selected polygons.</dd>
 <dt>S (Select polygons)</dt>
 <dd>Selects polygons having the Mat ID.</dd>
